--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,6 @@ baseURL = ""
 languageCode = "en-us"
 title = "AWS Lambda - Serverless"
 theme = "ananke"
+
+[params.lambdaComments]
+endpoint = "https://ef0ogkrphb.execute-api.us-east-2.amazonaws.com/default/student1010-comments-post"
