--- a/config.toml
+++ b/config.toml
@@ -4,4 +4,4 @@ title = "AWS Lambda - Serverless"
 theme = "ananke"
 
 [params.lambdaComments]
-endpoint = "https://ef0ogkrphb.execute-api.us-east-2.amazonaws.com/default/student1010-comments-post"
+endpoint = "https://plxm4v3dji.execute-api.us-east-2.amazonaws.com/default/student1010-comments-post"
