--- a/config.toml
+++ b/config.toml
@@ -4,4 +4,4 @@ title = "AWS Lambda - Serverless"
 theme = "ananke"
 
 [params.lambdaComments]
-endpoint = "https://plxm4v3dji.execute-api.us-east-2.amazonaws.com/default/student1010-comments-post"
+endpoint = "http://student1010-blog-stack-student00hugositebucket-3olhf4xqa5rq.s3-website.us-east-2.amazonaws.com"
