--- a/config.toml
+++ b/config.toml
@@ -4,4 +4,4 @@ title = "AWS Lambda - Serverless"
 theme = "ananke"
 
 [params.lambdaComments]
-endpoint = "https://4gnpyzgzj9.execute-api.us-east-2.amazonaws.com/Prod/comments/"
+endpoint = "https://labr4ikwel.execute-api.us-east-1.amazonaws.com/dev/comments"
